[FIXED] :: calendar ui :: image width to adjust button :: text align left

--- a/src/scss/themes/_product.scss
+++ b/src/scss/themes/_product.scss
@@ -67,6 +67,10 @@ input[type="checkbox"]{
 			right: 15px;
 			top: 15px;
 		}
+		img{
+			max-height: 130px;
+			max-width: 130px;
+		}
 	}
 }
 
